# Portfolio-DB

./: .env.example  .gitignore  CLAUDE.md  main.py  pyproject.toml  tickers.txt
.planning/: HANDOFF.json  MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/backlog/: edgar-fundamentals-us-broken.md  edgar-q4-gap-ttm-none.md  fundamentals-history-delta.md
.planning/debug/: edgar-q4-gap-ttm-none.md
.planning/milestones/: v1.0-MILESTONE-AUDIT.md  v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
data/: fundamentals.db
src/stocksig/: config.py  (+4 more)
tests/: conftest.py  test_auth_check.py  test_cache.py  test_cache_isolation.py  test_color_rules.py  test_color_tone.py  test_company_name.py  test_config.py  test_dart_client.py  test_dart_quarterly.py  test_edgar_canonical_select.py  test_edgar_client.py  test_edgar_q4_derive.py  test_edgar_quarterly.py  test_edgar_shares_fallback.py  test_ema.py  test_freeze_panes.py  test_fundamentals.py  test_fundamentals_delta.py  test_fundamentals_store.py  test_fundamentals_view.py  test_history_integration.py  test_history_render.py  test_history_sheets.py  test_impulse.py  test_indicators.py  test_input.py  test_input_extended.py  test_market.py  test_market_kind.py  test_metrics_engine.py  test_metrics_registry.py  test_naver_scraper.py  test_quarter_price.py  test_raw_semantics_spike.py  test_runner.py  test_sheet_portfolio.py  test_smoke_end_to_end.py  test_smoke_n_tickers.py  test_stats.py  (+5 more)
티커 백업/: tickers_260527.txt
(+197 files in other folders)
