[project]
name = "stocksig"
version = "0.1.0"
description = "표준편차 기반 주식 매매신호 + 포트폴리오 관리 시트"
requires-python = ">=3.13"
dependencies = [
    "yfinance>=0.2.66",
    "curl_cffi>=0.15,<0.16",
    "pandas>=2.2",
    "numpy>=2.0",
    "XlsxWriter>=3.2",
    "tenacity>=9.0",
    "python-dotenv>=1.0",
    "diskcache>=5.6",
    "pyrate-limiter>=3",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-mock",
    "openpyxl",
    "freezegun>=1.5.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/stocksig"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
